validate and delete api
